--- a/.github/workflows/update-on-lunes.yml
+++ b/.github/workflows/update-on-lunes.yml
@@ -19,18 +19,32 @@ jobs:
 
       - name: Create lunes-vless/vmess/trojan from lunes.txt
         run: |
+          # 检查 lunes.txt 是否存在
+          if [ ! -f lunes.txt ]; then
+            echo "lunes.txt not found" >&2
+            exit 1
+          fi
+
+          # 按行分割生成三个文件
           sed -n '1,3p' lunes.txt > lunes-vless.txt
           sed -n '4,6p' lunes.txt > lunes-vmess.txt
           sed -n '7,9p' lunes.txt > lunes-trojan.txt
+
+          # 提交变化
           git add lunes-vless.txt lunes-vmess.txt lunes-trojan.txt
           if git diff --cached --quiet; then
             echo "No changes to lunes-xxx files"
           else
             git commit -m "chore: generate lunes-vless/vmess/trojan from lunes.txt"
             git push
+          fi
 
-      - name: Build stations content
+      - name: Build combined stations content
         run: |
+          if [ ! -f niclai-station.txt ]; then
+            echo "niclai-station.txt not found" >&2
+            exit 1
+          fi
           cat lunes.txt > combined_stations.txt
           echo "" >> combined_stations.txt
           cat niclai-station.txt >> combined_stations.txt
