--- a/.github/workflows/update-on-lunes.yml
+++ b/.github/workflows/update-on-lunes.yml
@@ -17,6 +17,11 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Configure Git identity for linkcode commits
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "actions@github.com"
+
       - name: Create lunes-vless/vmess/trojan from lunes.txt
         run: |
           #!/bin/bash
@@ -32,7 +37,7 @@ jobs:
           sed -n '4,6p' lunes.txt > lunes-vmess.txt
           sed -n '7,9p' lunes.txt > lunes-trojan.txt
 
-          # 提交变更到 linkcode 仓库
+          # 提交变化到 linkcode
           git add lunes-vless.txt lunes-vmess.txt lunes-trojan.txt
           if git diff --cached --quiet; then
             echo "No changes to lunes-xxx files"
@@ -55,6 +60,11 @@ jobs:
           echo "" >> combined_stations.txt
           cat niclai-station.txt >> combined_stations.txt
 
+      - name: Configure Git identity for youtubedownloader commits
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "actions@github.com"
+
       - name: Clone target repo and update stations.txt
         env:
           PAT: ${{ secrets.LAIJUNLING_PAT }}
@@ -62,8 +72,6 @@ jobs:
           #!/bin/bash
           set -e
 
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "actions@github.com"
           rm -rf youtubedownloader || true
           git clone https://x-access-token:${PAT}@github.com/laijunling/youtubedownloader.git
           cd youtubedownloader
@@ -75,3 +83,7 @@ jobs:
           fi
           git commit -m "chore: update stations.txt from linkcode (lunes.txt changed)"
           git push origin HEAD
+
+
+
+
