--- a/.github/workflows/update-cookies.yml
+++ b/.github/workflows/update-cookies.yml
@@ -1,4 +1,4 @@
-name: Update cookies in youtubedownloader when cookies.txt changes
+name: Update cookies in ytd when cookies.txt changes
 
 on:
   push:
@@ -23,9 +23,9 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "actions@github.com"
-          rm -rf youtubedownloader || true
-          git clone https://x-access-token:${PAT}@github.com/laijunling/youtubedownloader.git
-          cd youtubedownloader
+          rm -rf ytd || true
+          git clone https://x-access-token:${PAT}@github.com/laijunling/ytd.git
+          cd ytd
           cp ../cookies.txt cookies.txt
           git add cookies.txt
           if git diff --cached --quiet; then
