--- a/.github/workflows/update-stations.yml
+++ b/.github/workflows/update-stations.yml
@@ -1,4 +1,4 @@
-name: Update stations in youtubedownloader when stations.txt changes
+name: Update stations in ytd when stations.txt changes
 
 on:
   push:
@@ -22,20 +22,20 @@ jobs:
           cat lunes.txt > combined_stations.txt
           cat stations.txt >> combined_stations.txt
 
-      - name: Clone target repo (youtubedownloader)
+      - name: Clone target repo (ytd)
         env:
           PAT: ${{ secrets.LAIJUNLING_PAT }}
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "actions@github.com"
-          rm -rf youtubedownloader || true
-          git clone https://x-access-token:${PAT}@github.com/laijunling/youtubedownloader.git
-          cd youtubedownloader
+          rm -rf ytd || true
+          git clone https://x-access-token:${PAT}@github.com/laijunling/ytd.git
+          cd ytd
           cp ../combined_stations.txt stations.txt
           git add stations.txt
           if git diff --cached --quiet; then
             echo "No changes to commit"
             exit 0
           fi
-          git commit -m "chore: update stations.txt from linkcode (niclai-station.txt changed)"
+          git commit -m "chore: update stations.txt from linkcode (stations.txt changed)"
           git push origin HEAD
