--- a/.github/workflows/update-stations.yml
+++ b/.github/workflows/update-stations.yml
@@ -43,7 +43,7 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "actions@github.com"
-          rm -rf ytd || true
+          rm -rf iron || true
           git clone https://x-access-token:${PAT}@github.com/laijunling/iron.git
           cd iron
           cp ../combined_stations.txt stations.txt
