--- a/.github/workflows/update-lunes.yml
+++ b/.github/workflows/update-lunes.yml
@@ -1,15 +1,15 @@
-name: Handle lunes.txt changes — split lunes and update stations
+name: Handle A-lunes.txt changes — sync to lunes.txt and update stations
 
 on:
   push:
     paths:
-      - 'lunes.txt'
+      - 'A-lunes.txt'
 
 permissions:
   contents: write
 
 jobs:
-  split-and-update:
+  sync-and-update:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout linkcode repo
@@ -21,6 +21,26 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "actions@github.com"
+
+      - name: Sync lunes.txt with A-lunes.txt
+        run: |
+          #!/bin/bash
+          set -e
+
+          if [ ! -f A-lunes.txt ]; then
+            echo "A-lunes.txt not found" >&2
+            exit 1
+          fi
+
+          cp A-lunes.txt lunes.txt
+
+          git add lunes.txt
+          if git diff --cached --quiet; then
+            echo "lunes.txt already up to date"
+          else
+            git commit -m "chore: sync lunes.txt with A-lunes.txt"
+            git push
+          fi
 
       - name: Create lunes-vless/vmess/trojan from lunes.txt
         run: |
@@ -37,7 +57,6 @@ jobs:
           sed -n '4,6p' lunes.txt > lunes-vmess.txt
           sed -n '7,9p' lunes.txt > lunes-trojan.txt
 
-          # 提交变化到 linkcode
           git add lunes-vless.txt lunes-vmess.txt lunes-trojan.txt
           if git diff --cached --quiet; then
             echo "No changes to lunes-xxx files"
@@ -80,9 +99,5 @@ jobs:
             echo "No changes to stations.txt"
             exit 0
           fi
-          git commit -m "chore: update stations.txt from linkcode (lunes.txt changed)"
+          git commit -m "chore: update stations.txt from linkcode (A-lunes.txt changed)"
           git push origin HEAD
-
-
-
-
