--- a/.github/workflows/update-stations.yml
+++ b/.github/workflows/update-stations.yml
@@ -1,29 +1,37 @@
-name: Update stations in ytd & iron when stations.txt changes
+name: Sync stations to ytd & iron when A-stations.txt changes
 
 on:
   push:
     paths:
-      - 'stations.txt'
+      - 'A-stations.txt'
 
 permissions:
   contents: write
 
 jobs:
-  update-stations:
+  sync-stations:
     runs-on: ubuntu-latest
     steps:
+      # 1️⃣ 拉取主仓库
       - name: Checkout linkcode repo
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-		- name: Sync stations.txt with A-stations.txt
+      # 2️⃣ 设置 Git 用户信息
+      - name: Configure Git identity
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "actions@github.com"
+
+      # 3️⃣ 将 A-stations.txt 同步为 stations.txt
+      - name: Sync stations.txt with A-stations.txt
         run: |
           #!/bin/bash
           set -e
 
           if [ ! -f A-stations.txt ]; then
-            echo "A-stations.txt not found" >&2
+            echo "❌ A-stations.txt not found!"
             exit 1
           fi
 
@@ -31,22 +39,31 @@ jobs:
 
           git add stations.txt
           if git diff --cached --quiet; then
-            echo "stations.txt already up to date"
+            echo "✅ stations.txt already up to date"
           else
             git commit -m "chore: sync stations.txt with A-stations.txt"
             git push
           fi
-		  
-      - name: Prepare combined stations content
+
+      # 4️⃣ 构建 combined_stations.txt（lunes + stations）
+      - name: Build combined_stations.txt
         run: |
-          cat lunes.txt > combined_stations.txt
+          #!/bin/bash
+          set -e
+          if [ -f lunes.txt ]; then
+            cat lunes.txt > combined_stations.txt
+          else
+            echo "# lunes.txt not found, using only stations.txt" > combined_stations.txt
+          fi
           cat stations.txt >> combined_stations.txt
 
-      # ========== 同步到 ytd 仓库 ==========
-      - name: Clone & update ytd repo
+      # 5️⃣ 同步到 ytd 仓库
+      - name: Update stations in ytd repo
         env:
           PAT: ${{ secrets.LAIJUNLING_PAT }}
         run: |
+          #!/bin/bash
+          set -e
           git config --global user.name "github-actions[bot]"
           git config --global user.email "actions@github.com"
 
@@ -56,20 +73,21 @@ jobs:
 
           cp ../combined_stations.txt stations.txt
           git add stations.txt
-
           if git diff --cached --quiet; then
-            echo "No changes to commit for ytd"
+            echo "✅ No changes for ytd"
           else
-            git commit -m "chore: update stations.txt from linkcode"
+            git commit -m "chore: update stations.txt from linkcode (A-stations.txt changed)"
             git push origin HEAD
           fi
           cd ..
 
-      # ========== 同步到 iron 仓库 ==========
-      - name: Clone & update iron repo
+      # 6️⃣ 同步到 iron 仓库
+      - name: Update stations in iron repo
         env:
           PAT: ${{ secrets.LAIJUNLING_PAT }}
         run: |
+          #!/bin/bash
+          set -e
           git config --global user.name "github-actions[bot]"
           git config --global user.email "actions@github.com"
 
@@ -77,17 +95,15 @@ jobs:
           git clone https://x-access-token:${PAT}@github.com/laijunling/iron.git
           cd iron
 
-          # 将 linkcode 仓库中的三个文件复制过去
           cp ../stations.txt stations.txt
           cp ../stations.txt iron.txt
           cp ../stations.txt lagon.txt
 
           git add stations.txt iron.txt lagon.txt
-
           if git diff --cached --quiet; then
-            echo "No changes to commit for iron"
+            echo "✅ No changes for iron"
           else
-            git commit -m "chore: sync stations.txt from linkcode"
+            git commit -m "chore: sync stations.txt from linkcode (A-stations.txt changed)"
             git push origin HEAD
           fi
           cd ..
