--- a/.github/workflows/update-stations.yml
+++ b/.github/workflows/update-stations.yml
@@ -36,14 +36,7 @@ jobs:
           fi
 
           cp A-stations.txt stations.txt
-
-          git add stations.txt
-          if git diff --cached --quiet; then
-            echo "✅ stations.txt already up to date"
-          else
-            git commit -m "chore: sync stations.txt with A-stations.txt"
-            git push
-          fi
+          echo "✅ Copied A-stations.txt → stations.txt"
 
       # 4️⃣ 构建 combined_stations.txt（lunes + stations）
       - name: Build combined_stations.txt
@@ -81,8 +74,8 @@ jobs:
           fi
           cd ..
 
-      # 6️⃣ 同步到 iron 仓库
-      - name: Update stations in iron repo
+      # 6️⃣ 同步到 iron 仓库，并更新 sacd2868.txt
+      - name: Update stations & sacd2868.txt in iron repo
         env:
           PAT: ${{ secrets.LAIJUNLING_PAT }}
         run: |
@@ -95,15 +88,24 @@ jobs:
           git clone https://x-access-token:${PAT}@github.com/laijunling/iron.git
           cd iron
 
+          echo "🪶 Updating iron repo with stations.txt..."
+
+          # 拷贝最新 stations.txt
           cp ../stations.txt stations.txt
           cp ../stations.txt iron.txt
           cp ../stations.txt lagon.txt
 
-          git add stations.txt iron.txt lagon.txt
+          # 从 stations.txt 取出最后一行 -> 更新 sacd2868.txt
+          last_line=$(tail -n 1 ../stations.txt)
+          echo "$last_line" > sacd2868.txt
+          echo "✅ sacd2868.txt updated with last line: $last_line"
+
+          # 提交更新
+          git add stations.txt iron.txt lagon.txt sacd2868.txt
           if git diff --cached --quiet; then
             echo "✅ No changes for iron"
           else
-            git commit -m "chore: sync stations.txt from linkcode (A-stations.txt changed)"
+            git commit -m "chore: sync stations.txt & sacd2868.txt from linkcode (A-stations.txt changed)"
             git push origin HEAD
           fi
           cd ..
