--- a/.github/workflows/update-lunes.yml
+++ b/.github/workflows/update-lunes.yml
@@ -12,19 +12,19 @@ jobs:
   sync-and-update:
     runs-on: ubuntu-latest
     steps:
-      # 1️⃣ 拉取主仓库
+      # 1️⃣ Checkout main repo
       - name: Checkout linkcode repo
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      # 2️⃣ 配置 Git
+      # 2️⃣ Configure Git identity
       - name: Configure Git identity
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "actions@github.com"
 
-      # 3️⃣ A-lunes.txt → lunes.txt
+      # 3️⃣ Sync A-lunes.txt -> lunes.txt
       - name: Sync lunes.txt with A-lunes.txt
         run: |
           #!/bin/bash
@@ -42,13 +42,13 @@ jobs:
             git push
           fi
 
-      # 4️⃣ 生成 vless/vmess/trojan 文件
+      # 4️⃣ Generate lunes-vless/vmess/trojan files
       - name: Create lunes-vless/vmess/trojan from lunes.txt
         run: |
           #!/bin/bash
           set -e
           if [ ! -f lunes.txt ]; then
-            echo "lunes.txt not found" >&2
+            echo "lunes.txt not found!" >&2
             exit 1
           fi
           sed -n '1,3p' lunes.txt > lunes-vless.txt
@@ -62,21 +62,21 @@ jobs:
             git push
           fi
 
-      # 5️⃣ 构建 combined_stations.txt
+      # 5️⃣ Build combined_stations.txt
       - name: Build combined stations content
         run: |
           #!/bin/bash
           set -e
           if [ ! -f stations.txt ]; then
-            echo "stations.txt not found" >&2
+            echo "stations.txt not found!" >&2
             exit 1
           fi
           cat lunes.txt > combined_stations.txt
           cat stations.txt >> combined_stations.txt
           echo "✅ combined_stations.txt built."
 
-      # 6️⃣ 更新 ytd 仓库
-      - name: Update ytd repo
+      # 6️⃣ Update ytd repo
+      - name: Update stations in ytd repo
         env:
           PAT: ${{ secrets.LAIJUNLING_PAT }}
         run: |
@@ -98,8 +98,8 @@ jobs:
           fi
           cd ..
 
-      # 7️⃣ 更新 iron 仓库（包含 sacd2868.txt）
-      - name: Update iron repo
+      # 7️⃣ Update iron repo
+      - name: Update stations & sacd2868.txt in iron repo
         env:
           PAT: ${{ secrets.LAIJUNLING_PAT }}
         run: |
@@ -110,22 +110,43 @@ jobs:
           rm -rf iron || true
           git clone https://x-access-token:${PAT}@github.com/laijunling/iron.git
           cd iron
-
-          echo "🪶 Updating iron repo with combined_stations.txt..."
-
-          # 拷贝 combined_stations.txt
           cp ../combined_stations.txt stations.txt
+          cp ../combined_stations.txt nedes.txt
           cp ../combined_stations.txt iron.txt
           cp ../combined_stations.txt lagon.txt
-
-          # sacd2868.txt = combined_stations.txt 的最后一行
           last_line=$(tail -n 1 ../combined_stations.txt)
           echo "$last_line" > sacd2868.txt
-          echo "✅ sacd2868.txt updated with last line: $last_line"
-
-          git add stations.txt iron.txt lagon.txt sacd2868.txt
+          git add stations.txt nedes.txt iron.txt lagon.txt sacd2868.txt
           if git diff --cached --quiet; then
             echo "✅ No changes for iron"
+          else
+            git commit -m "chore: sync combined_stations & sacd2868.txt from linkcode (A-lunes.txt changed)"
+            git pull --rebase origin HEAD || true
+            git push origin HEAD
+          fi
+          cd ..
+
+      # 8️⃣ Update team repo
+      - name: Update stations & sacd2868.txt in team repo
+        env:
+          PAT: ${{ secrets.LAIJUNLING_PAT }}
+        run: |
+          #!/bin/bash
+          set -e
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "actions@github.com"
+          rm -rf team || true
+          git clone https://x-access-token:${PAT}@github.com/laijunling/team.git
+          cd team
+          cp ../combined_stations.txt stations.txt
+          cp ../combined_stations.txt nedes.txt
+          cp ../combined_stations.txt iron.txt
+          cp ../combined_stations.txt lagon.txt
+          last_line=$(tail -n 1 ../combined_stations.txt)
+          echo "$last_line" > sacd2868.txt
+          git add stations.txt nedes.txt iron.txt lagon.txt sacd2868.txt
+          if git diff --cached --quiet; then
+            echo "✅ No changes for team"
           else
             git commit -m "chore: sync combined_stations & sacd2868.txt from linkcode (A-lunes.txt changed)"
             git pull --rebase origin HEAD || true
