--- a/.github/workflows/update-lunes.yml
+++ b/.github/workflows/update-lunes.yml
@@ -88,11 +88,12 @@ jobs:
           git clone https://x-access-token:${PAT}@github.com/laijunling/ytd.git
           cd ytd
           cp ../combined_stations.txt stations.txt
-          git add stations.txt
+          cp ../combined_stations.txt nodes.txt
+          git add stations.txt nodes.txt
           if git diff --cached --quiet; then
             echo "✅ No changes for ytd"
           else
-            git commit -m "chore: update stations.txt from linkcode (A-lunes.txt changed)"
+            git commit -m "chore: update stations.txt nodes.txt from linkcode (A-lunes.txt changed)"
             git pull --rebase origin HEAD || true
             git push origin HEAD
           fi
