--- a/.github/workflows/update-lunes.yml
+++ b/.github/workflows/update-lunes.yml
@@ -112,12 +112,12 @@ jobs:
           git clone https://x-access-token:${PAT}@github.com/laijunling/iron.git
           cd iron
           cp ../combined_stations.txt stations.txt
-          cp ../combined_stations.txt nedes.txt
+          cp ../combined_stations.txt nodes.txt
           cp ../combined_stations.txt iron.txt
           cp ../combined_stations.txt lagon.txt
           last_line=$(tail -n 1 ../combined_stations.txt)
           echo "$last_line" > sacd2868.txt
-          git add stations.txt nedes.txt iron.txt lagon.txt sacd2868.txt
+          git add stations.txt nodes.txt iron.txt lagon.txt sacd2868.txt
           if git diff --cached --quiet; then
             echo "✅ No changes for iron"
           else
@@ -140,12 +140,12 @@ jobs:
           git clone https://x-access-token:${PAT}@github.com/laijunling/team.git
           cd team
           cp ../combined_stations.txt stations.txt
-          cp ../combined_stations.txt nedes.txt
+          cp ../combined_stations.txt nodes.txt
           cp ../combined_stations.txt iron.txt
           cp ../combined_stations.txt lagon.txt
           last_line=$(tail -n 1 ../combined_stations.txt)
           echo "$last_line" > sacd2868.txt
-          git add stations.txt nedes.txt iron.txt lagon.txt sacd2868.txt
+          git add stations.txt nodes.txt iron.txt lagon.txt sacd2868.txt
           if git diff --cached --quiet; then
             echo "✅ No changes for team"
           else
