--- a/.github/workflows/Update-stations.yml
+++ b/.github/workflows/Update-stations.yml
@@ -1,4 +1,4 @@
-name: Handle stations.txt changes — update ytd, iron & team
+name: Handle stations.txt changes — update A-stations, ytd, iron & team
 
 on:
   push:
@@ -24,7 +24,7 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "actions@github.com"
 
-      # 3️⃣ Sync stations.txt -> A-stations.txt
+      # 3️⃣ Sync stations.txt → A-stations.txt and commit
       - name: Sync A-stations.txt with stations.txt
         run: |
           #!/bin/bash
@@ -33,10 +33,18 @@ jobs:
             echo "❌ stations.txt not found!"
             exit 1
           fi
+
           cp stations.txt A-stations.txt
+          git add A-stations.txt
+          if git diff --cached --quiet; then
+            echo "A-stations.txt already up to date"
+          else
+            git commit -m "chore: sync A-stations.txt from stations.txt"
+            git push
+          fi
           echo "✅ Copied stations.txt → A-stations.txt"
 
-      # 3️⃣ Build combined_stations.txt (lunes + stations)
+      # 4️⃣ Build combined_stations.txt (lunes + stations)
       - name: Build combined_stations.txt
         run: |
           #!/bin/bash
@@ -49,7 +57,7 @@ jobs:
           cat stations.txt >> combined_stations.txt
           echo "✅ combined_stations.txt built."
 
-      # 4️⃣ Update ytd repo
+      # 5️⃣ Update ytd repo
       - name: Update stations in ytd repo
         env:
           PAT: ${{ secrets.LAIJUNLING_PAT }}
@@ -75,7 +83,7 @@ jobs:
           fi
           cd ..
 
-      # 5️⃣ Update iron repo
+      # 6️⃣ Update iron repo
       - name: Update stations & sacd2868.txt in iron repo
         env:
           PAT: ${{ secrets.LAIJUNLING_PAT }}
@@ -94,6 +102,8 @@ jobs:
           cp ../combined_stations.txt nodes.txt
           cp ../combined_stations.txt iron.txt
           cp ../combined_stations.txt lagon.txt
+
+          # 更新 sacd2868.txt 为 combined_stations.txt 最后一行
           last_line=$(tail -n 1 ../combined_stations.txt)
           echo "$last_line" > sacd2868.txt
 
@@ -107,7 +117,7 @@ jobs:
           fi
           cd ..
 
-      # 6️⃣ Update team repo
+      # 7️⃣ Update team repo
       - name: Update stations & sacd2868.txt in team repo
         env:
           PAT: ${{ secrets.LAIJUNLING_PAT }}
